fixing css for the footer on smaller screen size

--- a/src/App.css
+++ b/src/App.css
@@ -431,8 +431,15 @@ nav a.active-link {
   .footer-text-container{
     justify-content:center !important;
     margin: 20px 0px !important;
-    gap: .75rem !important;
+    gap: 3rem !important;
     width: 100vw !important;
+  }
+
+  .footer-text-container > div{
+    width: 180px !important;
+    min-width: 180px;
+    height: 90px !important;
+    min-height: 90px;
   }
 
   .smaller-footer-text-container {
@@ -440,7 +447,6 @@ nav a.active-link {
     flex-wrap: wrap !important; 
     justify-content: center !important; 
     align-items: center !important; 
-    gap: .5rem !important; 
     text-align: center !important;
     overflow: auto !important;
     height: auto !important; 
@@ -451,9 +457,8 @@ nav a.active-link {
     display: flex;
     flex-direction: row;
     width: 100% !important;
-    gap: 1rem;
     justify-content: center;
-    padding-bottom: .8rem;
+    padding-bottom: .5rem;
   }
 
   .smaller-footer-text-container{
@@ -554,7 +559,7 @@ nav a.active-link {
 
 footer {
   width: 100%;
-  height: 260px;
+  max-height: 260px;
   background-color: var(--purple);
   display: flex;
   justify-content: center;
@@ -603,7 +608,12 @@ footer {
 .smaller-footer-text-container > div > *{
   margin: 0px 10px;
 }
-
+footer > div{
+  height: auto !important;
+  padding: 0 !important;
+  gap: 0 !important;
+  margin: 0 m !important;
+}
 .all-rights-reserved{
   text-align: center;
   justify-content: center;
